# flshchrd

./: CMakeLists.txt  LICENSE  README.md
data/: test.txt
src/: deck.cpp  deck.hpp  main.cpp  prompt.cpp  prompt.hpp
